<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.ggelardi.flucso.EntryFragment" >
    
    <!-- Global commands -->
    
    <item
        android:id="@+id/action_entry_like"
        android:title="@string/action_entry_like"
        android:icon="@drawable/menu_like"
        android:menuCategory="container"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_entry_unlike"
        android:title="@string/action_entry_unlike"
        android:icon="@drawable/menu_unlike"
        android:menuCategory="container"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_entry_speedc"
        android:title="@string/action_entry_speedc"
        android:icon="@drawable/menu_speed"
        android:menuCategory="container"
        android:orderInCategory="31"
        android:showAsAction="always"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_entry_summ"
        android:title="@string/action_entry_summ"
        android:icon="@drawable/menu_summary"
        android:menuCategory="container"
        android:orderInCategory="35"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_entry_share"
        android:title="@string/action_entry_share"
        android:icon="@drawable/menu_share"
        android:menuCategory="container"
        android:orderInCategory="40"
        android:showAsAction="never"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_entry_web"
        android:title="@string/action_entry_web"
        android:menuCategory="container"
        android:orderInCategory="90"
        android:showAsAction="never"
        app:showAsAction="never"/>
    
    <!-- Author commands -->
    
    <item
        android:id="@+id/action_entry_edit"
        android:title="@string/action_entry_edit"
        android:icon="@drawable/menu_post"
        android:menuCategory="container"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_entry_delete"
        android:title="@string/action_entry_delete"
        android:icon="@drawable/menu_delete"
        android:menuCategory="container"
        android:orderInCategory="51"
        android:showAsAction="never"
        app:showAsAction="never"/>

</menu>