<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.esorciccio.flucso.PostActivity" >
    
    <item
        android:id="@+id/action_post_send"
        android:title="@string/action_post_send"
        android:icon="@drawable/menu_accept"
        android:menuCategory="container"
        android:orderInCategory="1"
        android:showAsAction="always"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_post_file"
        android:title="@string/action_post_file"
        android:icon="@drawable/menu_attach"
        android:menuCategory="container"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_post_snap"
        android:title="@string/action_post_snap"
        android:icon="@drawable/menu_camera"
        android:menuCategory="container"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_post_home"
        android:title="@string/action_post_home"
        android:menuCategory="container"
        android:orderInCategory="10"
        android:showAsAction="never"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_post_wimg"
        android:title="@string/action_post_wimg"
        android:menuCategory="container"
        android:orderInCategory="20"
        android:showAsAction="never"
        app:showAsAction="never"/>

</menu>