<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/ll_srcf_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@drawable/divider_empty"
                    android:orientation="vertical"
                    android:padding="6dp"
                    android:showDividers="middle" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@drawable/divider_empty"
                        android:showDividers="middle" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_fwhat"
                            android:textAppearance="?android:attr/textAppearance" />

                        <EditText
                            android:id="@+id/edt_srcf_what"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/search_fhint"
                            android:inputType="text" >

                            <requestFocus />
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@drawable/divider_empty"
                        android:showDividers="middle" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_fwher"
                            android:textAppearance="?android:attr/textAppearance" />

                        <Spinner
                            android:id="@+id/sp_srcf_scope"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/search_feed_scopes" />

                    </LinearLayout>

                    <ListView
                        android:id="@+id/lv_srcf_feeds"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                    </ListView>

                </LinearLayout>

                <ScrollView
                    android:id="@+id/sv_srcp_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_sect1"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/rb_srcp_scp1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/search_scop1" />

                        <RadioButton
                            android:id="@+id/rb_srcp_scp2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_scop2" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" >

                            <RadioButton
                                android:id="@+id/rb_srcp_scp3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/search_scop3" />

                            <Spinner
                                android:id="@+id/sp_srcp_lists"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/empty_text"
                                android:prompt="@string/search_s3hin" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" >

                            <RadioButton
                                android:id="@+id/rb_srcp_scp4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/search_scop4" />

                            <EditText
                                android:id="@+id/edt_srcp_user"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/search_s4hin" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" >

                            <RadioButton
                                android:id="@+id/rb_srcp_scp5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/search_scop5" />

                            <EditText
                                android:id="@+id/edt_srcp_room"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/search_s5hin" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/search_sect2"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edt_srcp_what"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/search_words" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/edt_srcp_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/search_wotit" />

                        <EditText
                            android:id="@+id/edt_srcp_comm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/search_wocom" />

                        <EditText
                            android:id="@+id/edt_srcp_comby"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/search_comby" />

                        <EditText
                            android:id="@+id/edt_srcp_likby"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/search_likby" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="2dp"
                                android:layout_marginStart="5dp"
                                android:hint="@string/search_numst"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <EditText
                                android:id="@+id/edt_srcp_minc"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/search_numsc"
                                android:inputType="number" />

                            <EditText
                                android:id="@+id/edt_srcp_minl"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/search_numsl"
                                android:inputType="number" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_srcp_exec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_btngo" />
                    </LinearLayout>
                </ScrollView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>